# CavaThor

./: .clang-format  .devcontainer.json  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  docker-compose.yml  producer.kafka  vcpkg.json
.github/workflows/: build.yml
.thrash/: kafka-producer.cpp
docker/: dev.Dockerfile
runners/: IDestination.cpp  IDestination.hpp  IRaw2Destination.hpp  Raw2Redis.cpp  Raw2Redis.hpp  Replicator.cpp  Replicator.hpp  Synchronize.cpp  car.proto  kafka-consumer.cpp  kafka-producer.cpp  protobuf-producer.cpp  redis-producer.cpp  user.pb.cc  user.pb.h  user.proto
src/: Replicator.cpp  Replicator.hpp
src/Destinations/: RedisDestination.cpp  RedisDestination.hpp
src/Sources/: RedisSource.cpp  RedisSource.hpp
src/kafka-proto-consumer/: consumer.cpp
src/kafka-proto-producer/: producer.cpp
src/kafka-simple-consumer/: consumer.cpp
src/kafka-simple-producer/: producer.cpp
src/proto/: car.proto
